--- a/templates/server.properties.j2
+++ b/templates/server.properties.j2
@@ -106,6 +106,10 @@ host.name={{ hostvars[inventory_hostname]['ansible_host'] }}
     # If log.cleaner.enable=true is set the cleaner will be enabled and individual logs can then be marked for log compaction.
     log.cleaner.enable=false
 
+    {% if kafka_delete_topics_enable %}
+    delete.topic.enable = true
+    {% endif %}
+
     ############################# Zookeeper #############################
 
     # Zookeeper connection string (see zookeeper docs for details).
