--- a/templates/server.properties.j2
+++ b/templates/server.properties.j2
@@ -118,10 +118,8 @@ host.name={{ hostvars[inventory_hostname]['ansible_host'] }}
     # You can also append an optional chroot string to the urls to specify the
     # root directory for all kafka znodes.
 
-{#    zookeeper.connect={% for server in groups['zookeeper-nodes'] %}{{ hostvars[server]['ansible_nodename'] }}:{{ zookeeper_client_port }}{% if not loop.last %},{% endif %}{% endfor %}#}
-    zookeeper.connect={% for server in groups['zookeeper-nodes'] %}{{ hostvars[server]['inventory_hostname'] }}:{{ zookeeper_client_port }}{% if not loop.last %},{% endif %}{% endfor %}
-{#    zookeeper.connect={{ groups[zookeper_nodes_group] | join(',') }}#}
-{#    zookeeper.connect={{ zookeper_nodes | join(',') }}#}
+
+    zookeeper.connect={% for server in groups[zookeper_nodes_group] %}{{ hostvars[server]['inventory_hostname'] }}:{{ zookeeper_client_port }}{% if not loop.last %},{% endif %}{% endfor %}
 
 
 
