Add heap option and ability to pass java parameters in supervisord

--- a/templates/supervisord.conf.j2
+++ b/templates/supervisord.conf.j2
@@ -20,7 +20,7 @@ logfile_backups=10
 
 [program:kafka]
 user={{ kafka_user }}
-command=env JMX_PORT=9999 {{ kafka_dir }}/bin/kafka-server-start.sh {{ kafka_config_dir }}/server.properties
+command=env EXTRA_ARGS={{ kafka_java_opts }} KAFKA_HEAP_OPTS={{ kafka_heap_opts }} JMX_PORT=9999 {{ kafka_dir }}/bin/kafka-server-start.sh {{ kafka_config_dir }}/server.properties
 autostart=true
 autorestart=true
 redirect_stderr=true
