--- a/templates/server.properties.j2
+++ b/templates/server.properties.j2
@@ -127,7 +127,7 @@ host.name={{ hostvars[inventory_hostname]['ansible_host'] }}
     # root directory for all kafka znodes.
 
 
-    zookeeper.connect={% for server in groups[zookeper_nodes_group] %}{{ hostvars[server]['inventory_hostname'] }}:{{ zookeeper_client_port }}{% if not loop.last %},{% endif %}{% endfor %}
+    zookeeper.connect={{ kafka_zookeeper_connect }}
 
 
 
